--- a/studenckie/warsztat/klienci.glade
+++ b/studenckie/warsztat/klienci.glade
@@ -92,7 +92,7 @@ PANEL KLIENTÓW SPRZEDAWCY
                   <object class="GtkEntry" id="KlienciEntryP13">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="input_purpose">number</property>
+                    <property name="input_purpose">digits</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -159,7 +159,6 @@ PANEL KLIENTÓW SPRZEDAWCY
                   <object class="GtkEntry" id="KlienciEntryP14">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="input_purpose">alpha</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -296,7 +295,7 @@ PANEL KLIENTÓW SPRZEDAWCY
                     <property name="can_focus">False</property>
                     <property name="button_sensitivity">on</property>
                     <items>
-                      <item translatable="yes"> </item>
+                      <item translatable="yes">-</item>
                       <item translatable="yes">0</item>
                       <item translatable="yes">5</item>
                       <item translatable="yes">10</item>
@@ -316,7 +315,6 @@ PANEL KLIENTÓW SPRZEDAWCY
                   <object class="GtkEntry" id="KlienciEntryP25">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="input_purpose">alpha</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -329,7 +327,7 @@ PANEL KLIENTÓW SPRZEDAWCY
                   <object class="GtkEntry" id="KlienciEntryP24">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="input_purpose">number</property>
+                    <property name="input_purpose">digits</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -458,7 +456,7 @@ PANEL KLIENTÓW SPRZEDAWCY
                   <object class="GtkEntry" id="KlienciEntryP34">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="input_purpose">number</property>
+                    <property name="input_purpose">digits</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
