--- a/studenckie/warsztat/login.glade
+++ b/studenckie/warsztat/login.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="LoginWindow">
     <property name="can_focus">False</property>
+    <signal name="destroy" handler="LoginWindow_destroy_cb" swapped="no"/>
     <child>
       <object class="GtkBox" id="LoginBox1">
         <property name="visible">True</property>
@@ -66,6 +67,7 @@ ZALOGUJ SIĘ DO SYSTEMU:
               <object class="GtkEntry" id="LoginEntry22">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="input_purpose">password</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
