--- a/studenckie/warsztat/sprzedawca.glade
+++ b/studenckie/warsztat/sprzedawca.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="SprzWindow">
     <property name="can_focus">False</property>
+    <signal name="destroy" handler="SprzWindow_destroy_cb" swapped="no"/>
     <child>
       <object class="GtkBox" id="SprzBox">
         <property name="visible">True</property>
