--- a/studenckie/warsztat/magazynier.glade
+++ b/studenckie/warsztat/magazynier.glade
@@ -146,6 +146,7 @@ PANEL MAGAZYNIERA
                   <object class="GtkComboBoxText" id="MagComboboxtextP14">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -284,6 +285,7 @@ PANEL MAGAZYNIERA
                   <object class="GtkComboBoxText" id="MagComboboxtextP21">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -332,6 +334,7 @@ PANEL MAGAZYNIERA
                   <object class="GtkComboBoxText" id="MagComboboxtextP31">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
