--- a/studenckie/warsztat/uslugi.glade
+++ b/studenckie/warsztat/uslugi.glade
@@ -47,6 +47,7 @@
                   <object class="GtkComboBoxText" id="UslugiComboboxtextP11">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -236,6 +237,7 @@
                   <object class="GtkComboBoxText" id="UslugiComboboxtextP31">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
