--- a/studenckie/warsztat/zlecenia.glade
+++ b/studenckie/warsztat/zlecenia.glade
@@ -62,20 +62,6 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP13">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">USŁUGI</property>
-                    <property name="width_chars">0</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkEntry" id="ZleceniaEntryP11">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -91,6 +77,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <object class="GtkComboBoxText" id="ZleceniaComboboxtextP12">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                     <items>
                       <item translatable="yes">NIE</item>
                       <item translatable="yes">TAK</item>
@@ -104,33 +91,6 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="ZleceniaEntryP13">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="ZleceniaButtonP16">
-                    <property name="label" translatable="yes">ZŁÓŻ ZLECENIE</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <signal name="clicked" handler="ZleceniaButtonP16_clicked_cb" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">5</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkLabel" id="ZleceniaLabelP14">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -138,7 +98,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
-                    <property name="top_attach">3</property>
+                    <property name="top_attach">2</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -151,7 +111,20 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
-                    <property name="top_attach">4</property>
+                    <property name="top_attach">3</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP13">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="active">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">2</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -160,6 +133,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <object class="GtkComboBoxText" id="ZleceniaComboboxtextP14">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -169,9 +143,12 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP15">
+                  <object class="GtkButton" id="ZleceniaButtonP15">
+                    <property name="label" translatable="yes">ZŁÓŻ ZLECENIE</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <signal name="clicked" handler="ZleceniaButtonP15_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -202,65 +179,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP23">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <items>
-                      <item translatable="yes">-</item>
-                      <item translatable="yes">NIE</item>
-                      <item translatable="yes">TAK</item>
-                    </items>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkEntry" id="ZleceniaEntryP22">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP23">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">CZY FAKTURA</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP22">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">NUMER REJESTRACYJNY</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkLabel" id="ZleceniaLabelP21">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">ID</property>
+                    <property name="label" translatable="yes">ID ZLECENIA</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -273,6 +195,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <object class="GtkComboBoxText" id="ZleceniaComboboxtextP21">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -282,16 +205,42 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="ZleceniaButtonP24">
+                  <object class="GtkLabel" id="ZleceniaLabelP22">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">NAZWA USŁUGI</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">1</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="ZleceniaButtonP23">
                     <property name="label" translatable="yes">ZATWIERDŹ ZMIANY</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="ZleceniaButtonP24_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="ZleceniaButtonP23_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
-                    <property name="top_attach">3</property>
+                    <property name="top_attach">2</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP22">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="active">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">1</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -308,7 +257,7 @@ PANEL ZLECEŃ SPRZEDAWCY
               <object class="GtkLabel" id="ZleceniaLabel22">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">EDYTUJ ZLECENIE</property>
+                <property name="label" translatable="yes">DOPISZ USŁUGĘ</property>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -336,6 +285,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <object class="GtkComboBoxText" id="ZleceniaComboboxtextP31">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
