przywrócenie projektu warsztatu do wersji oddanej do oceny

--- a/studenckie/warsztat/zlecenia.glade
+++ b/studenckie/warsztat/zlecenia.glade
@@ -62,6 +62,18 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkEntry" id="ZleceniaEntryP11">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">0</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkComboBoxText" id="ZleceniaComboboxtextP12">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -141,41 +153,6 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">4</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkBox" id="ZleceniaBoxP11">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <child>
-                      <object class="GtkEntry" id="ZleceniaEntryP11L">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="input_purpose">alpha</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkEntry" id="ZleceniaEntryP11P">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">0</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
